federation/cluster-0/gateway-istio-eastwestgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-eastwestgateway
  namespace: istio-system
spec:
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"
